<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <TextView
                android:textColor="@color/pink04"
                android:id="@+id/textarea"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="50sp"
                android:gravity="end|bottom"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnclear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/pink01"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="30sp"
                    android:text="@string/_C"/>
                <Button
                    android:id="@+id/btnpercent"
                    android:backgroundTint="@color/pink01"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="30sp"
                    android:text="@string/_percentage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btnadd"
                    android:text="@string/_add"
                    android:backgroundTint="@color/pink01"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="30sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn7"
                    android:text="@string/_7"
                    android:backgroundTint="@color/pink01"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="30sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btn8"
                    android:text="@string/_8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/pink01"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="30sp"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btn9"
                    android:text="@string/_9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/pink01"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="30sp"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btnsubs"
                    android:text="@string/_subs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/pink01"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="30sp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn4"
                    android:text="@string/_4"
                    android:backgroundTint="@color/pink01"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="30sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btn5"
                    android:text="@string/_5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/pink01"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="30sp"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btn6"
                    android:text="@string/_6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/pink01"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="30sp"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btnmultiply"
                    android:text="@string/_multiply"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/pink01"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="30sp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn1"
                    android:text="@string/_1"
                    android:backgroundTint="@color/pink01"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="30sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btn2"
                    android:text="@string/_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/pink01"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="30sp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btn3"
                    android:text="@string/_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/pink01"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="30sp"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btndivide"
                    android:text="@string/_divide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/pink01"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="30sp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn00"
                    android:text="@string/_00"
                    android:backgroundTint="@color/pink01"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="30sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btn0"
                    android:text="@string/_0"
                    android:backgroundTint="@color/pink01"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="30sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btndot"
                    android:text="@string/_."
                    android:backgroundTint="@color/pink01"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="30sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btnequals"
                    android:text="@string/_equals"
                    android:backgroundTint="@color/pink01"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="30sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
